...
import OnboardingScreen from './src/screens/auth/Onboarding';
import LoginScreen from './src/screens/auth/Login';
import ProfileCreationScreen from './src/screens/auth/ProfileCreation';
import ForgotPasswordScreen from './src/screens/auth/ForgotPassword';
import VerifyOtpScreen from './src/screens/auth/VerifyOtp';
import HomeScreen from './src/screens/HomeScreen';
import CoursesScreen from './src/screens/tabs/Courses';
import ProfileScreen from './src/screens/tabs/Profile';
import CourseListScreen from './src/screens/courses/CourseList';
import CourseDetailsScreen from './src/screens/courses/CourseDetails';
import LessonDetailsScreen from './src/screens/lessons/LessonDetails';
import SearchScreen from './src/screens/search/SearchScreen';
import { TabActiveBookShelfIcon, TabActiveHomeIcon, TabActiveProfileIcon, TabBookShelfIcon, TabHomeIcon, TabProfileIcon } from '@/components/ui/Icon';
...
          fontWeight: 'medium',
          fontFamily: 'Inter',
        },
        tabBarLabel: ({ focused }) => {
          let label = '';
          if (route.name === 'Home-Screen') {
            label = 'Home';
          } else if (route.name === 'Courses') {
            label = 'My courses';
          } else if (route.name === 'Profile') {
            label = 'Profile';
          }
          return (
...
